Version 1.2.2

- Add explict null check for missing XYS textures
- Update translation framework
- Update logging framework
- Update UI control framework


Version 1.2.1

- Add explicit null check to UpdateACI


Version 1.2

- Add numeric RGB entry
- Add check for missing LODs when colorizing buildings


Version 1.1

- (Re)add Colorize and Invert functions
- Replace translation framework
- Overhaul all code
- Overhaul project structure


Version 1.0.3

- Add Russian translation by vitalii201 
- Update bundled CitiesHarmony to 1.0.5


Version 1.0.2

- Copy and paste keystrokes now only recognised when color picker is open


Version 1.0.1

- Adjust colour icon position on service building panels
- Added Korean translations by TwotoolusFLY BAUST 


Version 1.0

- Migrate to Harmony 2.0