@@ -1,3 +1,8 @@
+- Add support for Industries DLC Warehouses, Match Day Stadiums, and Campus DLC Stadiums
+- Extend colorization to sub-buildings
+- Add colorization for buildings with custom renderers
+
+
 Version 1.2.2
 
 - Add explict null check for missing XYS textures
